--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,50 +1,43 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 .youtube-list{
   display: flex;
   grid-template-columns: repeat(4,1tr);
-  grid-gap: 25px;
-  padding: 25px;
+  grid-gap: -60px;
+  padding: 10px;
+  margin: 12rem;
+  margin-left: 30rem;
 }
 
 .youtube-avatar{
-  height: 38rem;
-  width: 100%;
+  height: 50px;
+  width: 50px;
+  border-radius: 100rem;
+  object-fit: cover;
+  flex-shrink: 0;
+}
+
+.youtube-footer{
+  display: flex;
+  align-items: flex-start;
+  gap: 0 20px;
+}
+
+.youtube-image {
+  width: 50%;
+}
+
+.youtube-info{
+  display: block;
+}
+  
+.youtube-info {
+    display: block;
+    margin-left: -19px;
+}
+
+h6{
+  margin: 8px;
+}
+
+.youtube-author{
+  color: silver;
 }
