--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,10 +1,8 @@
 .youtube-list{
   display: flex;
   grid-template-columns: repeat(4,1tr);
-  grid-gap: -60px;
-  padding: 10px;
-  margin: 12rem;
-  margin-left: 30rem;
+  grid-gap: 25px;
+  padding: 25px;
 }
 
 .youtube-avatar{
@@ -22,7 +20,7 @@
 }
 
 .youtube-image {
-  width: 50%;
+  width: 10rem;
 }
 
 .youtube-info{
